--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "build:test": "node scripts/build.test.js"
   },
   "eslintConfig": {
     "extends": "react-app"
