--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-transition-group": "^4.1.1",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
+    "sass-resources-loader": "^2.0.1",
     "semver": "6.0.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.3",
